Final Project Pemograman Web

--- a/index.html
+++ b/index.html
@@ -97,3 +97,43 @@
         </div>
       </div>
     </section>
+
+    <section class="room__container" id="room">
+      <p class="section__subheader">RUANGAN</p>
+      <h2 class="section__header">Type Kamar dan Harga</h2>
+      <div class="room__grid">
+        <div class="room__card">
+          <img src="Gambar/room1.jpg" alt="room" />
+          <div class="room__card__details">
+            <div>
+              <h4>Standar Double</h4>
+              <p>Kamar dengan 1 tempat tidur dan fasilitas kipas angin.</p>
+            </div>
+            <h3>250K<span>/night</span></h3>
+          </div>
+        </div>
+        <div class="room__card">
+          <img src="Gambar/room2.jpg" alt="room" />
+          <div class="room__card__details">
+            <div>
+              <h4>Deluxe Double</h4>
+              <p>Kamar dengan 1 tempat tidur dan fasilitas AC.</p>
+            </div>
+            <h3>300K<span>/night</span></h3>
+          </div>
+        </div>
+        <div class="room__card">
+          <img src="Gambar/room3.jpg" alt="room" />
+          <div class="room__card__details">
+            <div>
+              <h4>Family Suite</h4>
+              <p>
+                Kamar keluarga dengan 2 kasur dan menggunakan AC.
+              </p>
+            </div>
+            <h3>500K<span>/night</span></h3>
+          </div>
+        </div>
+      </div>
+    </section>
+    </body>
