Final Project Pemrograman Web

--- a/index.html
+++ b/index.html
@@ -137,3 +137,58 @@
       </div>
     </section>
     </body>
+
+    <section class="section__container feature__container" id="feature">
+      <p class="section__subheader">FASILITAS</p>
+      <h2 class="section__header">FITUR</h2>
+      <div class="feature__grid">
+        <div class="feature__card">
+          <span><i class="ri-thumb-up-line"></i></span>
+          <h4>Punya Rating Yang Tinggi</h4>
+          <p>
+            Kami bangga menerima peringkat tinggi dan ulasan positif.
+          </p>
+        </div>
+        <div class="feature__card">
+          <span><i class="ri-time-line"></i></span>
+          <h4>Jam Tenang</h4>
+          <p>
+            Kami memahami bahwa kedamaian dan istirahat 
+            tanpa gangguan sangat penting bagi anda.
+          </p>
+        </div>
+        <div class="feature__card">
+          <span><i class="ri-map-pin-line"></i></span>
+          <h4>Lokasi Terbaik</h4>
+          <p>
+            Di situs pemesanan penginapan kami, kami bangga menawarkan 
+            akomodasi di lokasi paling prima dan paling dicari.
+          </p>
+        </div>
+        <div class="feature__card">
+          <span><i class="ri-close-circle-line"></i></span>
+          <h4>Pembatalan Gratis</h4>
+          <p>
+            Kami paham bahwa rencana perjalanan dapat berubah sewaktu-waktu
+            maka dari itu kami menawarkan fleksibilitas pembatalan gratis.
+          </p>
+        </div>
+        <div class="feature__card">
+          <span><i class="ri-wallet-line"></i></span>
+          <h4>Opsi Pembayaran</h4>
+          <p>
+            Situs pemesanan penginapan kami menawarkan berbagai 
+            macam opsi pembayaran yang nyaman dan sesuai dengan preferensi anda.
+          </p>
+        </div>
+        <div class="feature__card">
+          <span><i class="ri-coupon-line"></i></span>
+          <h4>Penawaran Spesial</h4>
+          <p>
+            Nikmati Kenyamanan tanpa batas dengan harga terbaik. 
+            pesan sekarang untuk liburan tak terlupakan!
+          </p>
+        </div>
+      </div>
+    </section>
+    
