Final Project Pemograman Web

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
       </div>
       <div class="about__content">
-        <p class="section__subheader" id="sub_about"> TENTANG KAMI</p>
+        <p class="section__subheader" id="tentang"> TENTANG KAMI</p>
         <h2 class="section__header"></h2>
         <p class="section__description">
           Mari jelajahi kemewahan di penginapan kami, tempat kenyamanan dan keindahan bersatu.
@@ -138,7 +138,7 @@
       </div>
     </div>
   </section>
-</body>
+
 
 <section class="section__container feature__container" id="feature">
   <p class="section__subheader">FASILITAS</p>
@@ -197,7 +197,10 @@
 
 <!-- Maps -->
 
-
+<h2>Lokasi</h2>
+<div class="maps">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15818.19733330406!2d110.1971244808419!3d-7.623914270958199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a8dac1cac2513%3A0x1fc9cfb8bf75a3b!2sGRIYO%20DHAHAR%20JOGLO%20DHEPIS!5e0!3m2!1sen!2sid!4v1715325084943!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 
 
 
@@ -269,3 +272,5 @@
     Copyright © 2024 UTS Pemograman Web.
   </div>
 </footer>
+</body>
+</html>
