--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="nav__bar">
       <div class="nav__header">
         <div class="logo nav__logo">
-          <div>JD</div>
+          <div class="judul-nav">JD</div>
           <span>HOMESTAY<br />JOGLODHEPIS</span>
           <div></div>
           <i class="ri-star-fill"></i>
@@ -32,6 +32,8 @@
         <li><a href="#tentang">Tentang Kami</a></li>
         <li><a href="#room">Ruangan</a></li>
         <li><a href="#feature">Fasilitas</a></li>
+        <li><a href="#lokasi">Lokasi</a></li>
+
       </ul>
     </div>
   </nav>
@@ -198,7 +200,7 @@
 <!-- Maps -->
 
 <h2>Lokasi</h2>
-<div class="maps">
+<div class="maps" id="lokasi">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15818.19733330406!2d110.1971244808419!3d-7.623914270958199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a8dac1cac2513%3A0x1fc9cfb8bf75a3b!2sGRIYO%20DHAHAR%20JOGLO%20DHEPIS!5e0!3m2!1sen!2sid!4v1715325084943!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
