--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+<!-- Navbar -->
   <nav>
     <div class="nav__bar">
       <div class="nav__header">
@@ -45,7 +46,9 @@
       <button class="btn">PESAN SEKARANG</button>
     </div>
   </header>
+<!-- Navbar -->
 
+<!-- Booking -->
   <section class="booking">
     <div class="section__container booking__container">
       <form action="/">
@@ -65,7 +68,10 @@
       </form>
     </div>
   </section>
+<!-- Booking -->
 
+
+<!-- Tentang Kami -->
   <section class="about" id="about">
     <div class="section__container about__container">
       <div class="about__grid">
@@ -101,7 +107,9 @@
       </div>
     </div>
   </section>
+<!-- Tentang Kami -->
 
+<!-- Room -->
   <section class="room__container" id="room">
     <p class="section__subheader">RUANGAN</p>
     <h2 class="section__header">Type Kamar dan Harga</h2>
@@ -140,8 +148,10 @@
       </div>
     </div>
   </section>
+<!-- Room -->
 
 
+<!-- Fitur -->
 <section class="section__container feature__container" id="feature">
   <p class="section__subheader">FASILITAS</p>
   <h2 class="section__header">FITUR</h2>
@@ -195,17 +205,19 @@
     </div>
   </div>
 </section>
-
+<!-- Fitur -->
 
 <!-- Maps -->
-
+<br>
+<br>
+<hr>
 <h2>Lokasi</h2>
 <div class="maps" id="lokasi">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15818.19733330406!2d110.1971244808419!3d-7.623914270958199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a8dac1cac2513%3A0x1fc9cfb8bf75a3b!2sGRIYO%20DHAHAR%20JOGLO%20DHEPIS!5e0!3m2!1sen!2sid!4v1715325084943!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
-
-
-
+<br>
+<br>
+<!-- Maps -->
 
 <!-- Footer -->
 <footer class="footer">
@@ -274,5 +286,7 @@
     Copyright © 2024 UTS Pemograman Web.
   </div>
 </footer>
+<!-- Footer -->
+
 </body>
 </html>
