--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="style.css" />
   <title>Homestay Joglo Dhepis</title>
 </head>
@@ -30,11 +31,10 @@
       </div>
       <ul class="nav__links" id="nav-links">
         <li><a href="#beranda">Beranda</a></li>
-        <li><a href="#tentang">Tentang Kami</a></li>
+        <li><a href="#about">Tentang Kami</a></li>
         <li><a href="#room">Ruangan</a></li>
-        <li><a href="#feature">Fasilitas</a></li>
-        <li><a href="#lokasi">Lokasi</a></li>
-
+        <li><a href="#fiturr">Fasilitas</a></li>
+        <li><a href="signup.html" class="daftar">Sign Up / Sign in</a></li>
       </ul>
     </div>
   </nav>
@@ -47,29 +47,6 @@
     </div>
   </header>
 <!-- Navbar -->
-
-<!-- Booking -->
-  <section class="booking">
-    <div class="section__container booking__container">
-      <form action="/">
-        <div class="input__group">
-          <label for="arrival">Tanggal Masuk</label>
-          <input type="text" placeholder="01/01/2024" />
-        </div>
-        <div class="input__group">
-          <label for="departure">Tanggal Keluar</label>
-          <input type="text" placeholder="01/02/2024" />
-        </div>
-        <div class="input__group">
-          <label for="guests">Nama Tamu</label>
-          <input type="text" placeholder="Nama Anda" />
-        </div>
-        <button class="btn" id="btn_book">Cek Ketersediaan</button>
-      </form>
-    </div>
-  </section>
-<!-- Booking -->
-
 
 <!-- Tentang Kami -->
   <section class="about" id="about">
@@ -154,7 +131,7 @@
 <!-- Fitur -->
 <section class="section__container feature__container" id="feature">
   <p class="section__subheader">FASILITAS</p>
-  <h2 class="section__header">FITUR</h2>
+  <h2 class="section__header" id="fiturr">FITUR</h2>
   <div class="feature__grid">
     <div class="feature__card">
       <span><i class="ri-thumb-up-line"></i></span>
@@ -208,15 +185,11 @@
 <!-- Fitur -->
 
 <!-- Maps -->
-<br>
-<br>
-<hr>
-<h2>Lokasi</h2>
+<br><br><hr>
+<h2 id="location">Lokasi</h2>
 <div class="maps" id="lokasi">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15818.19733330406!2d110.1971244808419!3d-7.623914270958199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a8dac1cac2513%3A0x1fc9cfb8bf75a3b!2sGRIYO%20DHAHAR%20JOGLO%20DHEPIS!5e0!3m2!1sen!2sid!4v1715325084943!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-<br>
-<br>
+</div><br><br>
 <!-- Maps -->
 
 <!-- Footer -->
@@ -288,5 +261,8 @@
 </footer>
 <!-- Footer -->
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="script.js"></script>
 </body>
 </html>
