--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="section__container about__container">
       <div class="about__grid">
         <div class="about__image">
-          <img src="gambar/about1.jpg" alt="Joglo Dhepis">
+          <img src="gambar/about--1.jpg" alt="Joglo Dhepis">
         </div>
         <div class="about__card">
           <span> <i class="ri-user-line"></i></span>
@@ -71,7 +71,7 @@
           </p>
         </div>
         <div class="about__image">
-          <img src="gambar/about2.jpg" alt="Joglo Dhepis">
+          <img src="gambar/about--2.jpg" alt="Joglo Dhepis">
         </div>
         <div class="about__card">
           <span><i class="ri-calendar-check-line"></i></span>
