--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
         <li><a href="#about">Tentang Kami</a></li>
         <li><a href="room_notlogin.html">Ruangan</a></li>
         <li><a href="#fiturr">Fasilitas</a></li>
+        <li><a href="team.html">Our Team</a></li>
         <div class="dropdown">
           <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Account
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="login_register.php">Register / Login</a></li>
-            <li><a class="dropdown-item" href="admin_login.php">Admin</a></li>
+            <li><a class="dropdown-item" href="login_register_admin.php">Admin</a></li>
           </ul>
         </div>
       </ul>
