--- a/room.html
+++ b/room.html
@@ -40,6 +40,7 @@
             <li><a href="home.php">Beranda</a></li>
             <li><a href="home.php#about">Tentang Kami</a></li>
             <li><a href="home.php#fiturr">Fasilitas</a></li>
+            <li><a href="team.html">Our Team</a></li>
             <li><a href="logout.php" class="logout">Logout</a></li>
           </ul>
         </div>
