--- a/room_notlogin.html
+++ b/room_notlogin.html
@@ -30,6 +30,7 @@
             <li><a href="index.html">Beranda</a></li>
             <li><a href="index.html#about">Tentang Kami</a></li>
             <li><a href="index.html#fiturr">Fasilitas</a></li>
+            <li><a href="team.html">Our Team</a></li>
             <div class="dropdown">
               <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Account
