--- a/room_notlogin.html
+++ b/room_notlogin.html
@@ -57,7 +57,7 @@
             <p>Kamar dengan 1 tempat tidur dan fasilitas kipas angin.</p>
           </div>
           <h3>250K<span>/Night</span></h3>
-          <a href="book.php">Book</a>
+          <a href="login_register.php">Book</a>
         </div>
       </div>
       <div class="room__card">
@@ -68,7 +68,7 @@
             <p>Kamar dengan 1 tempat tidur dan fasilitas AC.</p>
           </div>
           <h3>300K<span>/Night</span></h3>
-          <a href="book.php">Book</a>
+          <a href="login_register.php">Book</a>
         </div>
       </div>
       <div class="room__card">
@@ -81,7 +81,7 @@
             </p>
           </div>
           <h3>500K<span>/Night</span></h3>
-          <a href="book.php">Book</a>
+          <a href="login_register.php">Book</a>
         </div>
       </div>
     </div>
