--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
             </div>
             <!-- Team Member 3 -->
             <div class="col-md-4 team-member">
-                <img src="https://via.placeholder.com/150" alt="Member Photo">
+                <img src="gambar/alfin.jpg" alt="Member Photo">
                 <h4>Andi M B Alfin</h4>
                 <p>22.11.4634</p>
                 <h5>Github</h5>
@@ -90,7 +90,7 @@
             </div>
             <!-- Team Member 5 -->
             <div class="col-md-4 team-member">
-                <img src="https://via.placeholder.com/150" alt="Member Photo">
+                <img src="gambar/ridhwan.jpg" alt="Member Photo">
                 <h4>Ridhwan Abdul Hakim A.</h4>
                 <p>22.11.4666</p>
                 <h5>Github</h5>
