--- a/room.html
+++ b/room.html
@@ -52,7 +52,7 @@
     <h2 class="section__header">Type Kamar dan Harga</h2>
     <div class="room__grid">
       <div class="room__card">
-        <img src="Gambar/room1.jpg" alt="room" />
+        <img src="gambar/room1.jpg" alt="room" />
         <div class="room__card__details">
           <div>
             <h4>Standar Double</h4>
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="room__card">
-        <img src="Gambar/room2.jpg" alt="room" />
+        <img src="gambar/room2.jpg" alt="room" />
         <div class="room__card__details">
           <div>
             <h4>Deluxe Double</h4>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="room__card">
-        <img src="Gambar/room3.jpg" alt="room" />
+        <img src="gambar/room3.jpg" alt="room" />
         <div class="room__card__details">
           <div>
             <h4>Family Suite</h4>
